force-app/main/default/objects/DealerBrands__c/DealerBrands__c.object-meta.xml
<CustomObject>
    <description>This table defines the Dealer Brand Override values.</description>
    <label>Dealer Brand</label>
    <nameField>
        <displayFormat>DBR-{0000}</displayFormat>
        <label>Dealer Brands Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>