force-app/main/default/objects/DealerBrands__c/fields/Activator_BrandId__c.field-meta.xml
<CustomField>
    <fullName>Activator_BrandId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Brand record in the Activator System</inlineHelpText>
    <label>Activator Brand Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>