force-app/main/default/objects/DealerBrands__c/fields/Activator_DealerBrandId__c.field-meta.xml
<CustomField>
    <fullName>Activator_DealerBrandId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Dealer Brand Record in the Activator system</inlineHelpText>
    <label>Activator Dealer Brand Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>