force-app/main/default/objects/DealerBrands__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>