force-app/main/default/objects/DealerBrands__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>