force-app/main/default/objects/DealerBrands__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Brand associated with this dealer override</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Brands__c</referenceTo>
    <relationshipLabel>Dealer Brands</relationshipLabel>
    <relationshipName>Dealer_Brands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>