force-app/main/default/objects/DealerBrands__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Dealer the Brand is associated with</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Brands (Facilities)</relationshipLabel>
    <relationshipName>Dealer_Brands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>