force-app/main/default/objects/DealerBrands__c/fields/DealerName__c.field-meta.xml
<CustomField>
    <fullName>DealerName__c</fullName>
    <label>Dealer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>