force-app/main/default/objects/DealerBrands__c/fields/DirectionsUrl__c.field-meta.xml
<CustomField>
    <fullName>DirectionsUrl__c</fullName>
    <label>Directions URL</label>
    <type>Url</type>
</CustomField>