force-app/main/default/objects/DealerBrands__c/fields/LogoTypeId__c.field-meta.xml
<CustomField>
    <fullName>LogoTypeId__c</fullName>
    <description>Which logo to use: 1: Brand, 2: Dealer</description>
    <inlineHelpText>Which logo to use: 1: Brand, 2: Dealer</inlineHelpText>
    <label>Logo Type Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>