force-app/main/default/objects/DealerBrands__c/fields/MarketingFriendlyFromFormatId__c.field-meta.xml
<CustomField>
    <fullName>MarketingFriendlyFromFormatId__c</fullName>
    <inlineHelpText>1=Sender Name at Client Name
2=Client Name
3=Sender Name</inlineHelpText>
    <label>Marketing Friendly From Format Id</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sender Name at Client Name</fullName>
            </value>
            <value>
                <fullName>Client Name</fullName>
            </value>
            <value>
                <fullName>Sender Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>