force-app/main/default/objects/DealerBrands__c/fields/OttoMarketingBdcEmailSender__c.field-meta.xml
<CustomField>
    <fullName>OttoMarketingBdcEmailSender__c</fullName>
    <label>Otto Marketing BDC Email Sender</label>
    <type>Email</type>
</CustomField>