force-app/main/default/objects/DealerBrands__c/fields/OttoMarketingSalesMonthsPurchased__c.field-meta.xml
<CustomField>
    <fullName>OttoMarketingSalesMonthsPurchased__c</fullName>
    <label>Otto Marketing Sales Months Purchased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>