force-app/main/default/objects/DealerBrands__c/fields/OttoMarketingServiceEmailSender__c.field-meta.xml
<CustomField>
    <fullName>OttoMarketingServiceEmailSender__c</fullName>
    <label>Otto Marketing Service Email Sender</label>
    <type>Email</type>
</CustomField>