force-app/main/default/objects/DealerBrands__c/fields/PartsPhone__c.field-meta.xml
<CustomField>
    <fullName>PartsPhone__c</fullName>
    <label>Parts Phone</label>
    <type>Phone</type>
</CustomField>