force-app/main/default/objects/DealerBrands__c/fields/PartsUrl__c.field-meta.xml
<CustomField>
    <fullName>PartsUrl__c</fullName>
    <label>Parts URL</label>
    <type>Url</type>
</CustomField>