force-app/main/default/objects/DealerBrands__c/fields/SalesPhone__c.field-meta.xml
<CustomField>
    <fullName>SalesPhone__c</fullName>
    <label>Sales Phone</label>
    <type>Phone</type>
</CustomField>