force-app/main/default/objects/DealerBrands__c/fields/ServicePhone__c.field-meta.xml
<CustomField>
    <fullName>ServicePhone__c</fullName>
    <label>Service Phone</label>
    <type>Phone</type>
</CustomField>