force-app/main/default/objects/DealerBrands__c/fields/ServiceUrl__c.field-meta.xml
<CustomField>
    <fullName>ServiceUrl__c</fullName>
    <label>Service URL</label>
    <type>Url</type>
</CustomField>