force-app/main/default/objects/DealerBrands__c/fields/ValueYourTradeUrl__c.field-meta.xml
<CustomField>
    <fullName>ValueYourTradeUrl__c</fullName>
    <label>Value Your Trade URL</label>
    <type>Url</type>
</CustomField>