force-app/main/default/objects/DealerBrands__c/fields/WebsiteUrl__c.field-meta.xml
<CustomField>
    <fullName>WebsiteUrl__c</fullName>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>