force-app/main/default/objects/DealerBrands__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer__c</columns>
    <columns>Brand__c</columns>
    <columns>Brand_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>